--- a/PeriodTrackerXGBoost.ipynb
+++ b/PeriodTrackerXGBoost.ipynb
@@ -32,7 +32,19 @@
       "metadata": {
         "id": "m8bOi9Dg27oV"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'xgboost'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[2], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msns\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgboost\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mxgb\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m f1_score,confusion_matrix, mean_squared_error, mean_absolute_error, classification_report, roc_auc_score, roc_curve, precision_score, recall_score, r2_score\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
+          ]
+        }
+      ],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -63,9 +75,7 @@
         }
       ],
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/PeriodData.csv')\n",
+        "df = pd.read_csv('PeriodData.csv')\n",
         "np.random.seed(0)"
       ]
     },
@@ -26280,6 +26290,7 @@
       },
       "outputs": [],
       "source": [
+        "df = df.drop(columns=['LengthofLutealPhase'])\n",
         "df = df.drop(columns=['ClientID'])"
       ]
     },
@@ -26309,7 +26320,7 @@
       "source": [
         "# Plot histograms\n",
         "columns_to_plot = ['CycleNumber', 'LengthofCycle', 'MeanCycleLength',\n",
-        "       'EstimatedDayofOvulation', 'LengthofLutealPhase', 'LengthofMenses',\n",
+        "       'EstimatedDayofOvulation', 'LengthofMenses',\n",
         "       'MeanMensesLength']\n",
         "\n",
         "plt.figure(figsize=(12, 8))\n",
