--- a/PeriodTracker_Menses.ipynb
+++ b/PeriodTracker_Menses.ipynb
@@ -74114,13 +74114,17 @@
         "id": "VgO4IA2aKZzm",
         "outputId": "bedd4c18-8f97-4e36-8276-3bfc76688aee"
       },
-      "execution_count": null,
+      "execution_count": 484,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 32 candidates, totalling 160 fits\n"
+            "Fitting 5 folds for each of 32 candidates, totalling 160 fits\n",
+            "Best Parameters: {'final_estimator__fit_intercept': True, 'gb__learning_rate': 0.01, 'gb__n_estimators': 100, 'rf__max_depth': None, 'rf__n_estimators': 200}\n",
+            "Mean Squared Error: 7.355983557015923\n",
+            "R-squared: 0.4982385884708236\n",
+            "Mean Absolute Error: 1.8914378882584377\n"
           ]
         }
       ]
@@ -74131,10 +74135,25 @@
         "joblib.dump(linear_model, 'menses_predictor.pkl')"
       ],
       "metadata": {
-        "id": "VJI7PFdivG3_"
+        "id": "VJI7PFdivG3_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c588a7e8-c81c-4797-d3e6-d8610c3b71f9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 485,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['menses_predictor.pkl']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 485
+        }
+      ]
     }
   ]
 }
